fixing spacing in icon/title

--- a/style/desktop.css
+++ b/style/desktop.css
@@ -47,3 +47,6 @@ div.record {
     background-repeat: no-repeat;
     background-size: cover;
 }
+img + span {
+    display: block
+}
